--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,13 @@
         <version>1.18.12</version>
         <scope>provided</scope>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/jstl/jstl -->
+    <dependency>
+        <groupId>jstl</groupId>
+        <artifactId>jstl</artifactId>
+        <version>1.2</version>
+    </dependency>
+
 </dependencies>
     <build>
         <plugins>
